# l2c-ctfs-mcp

./: README.md  main.py  pyproject.toml
client/: l2c_ctf_client.py  mcp_client.py
src/: function_app.py
